# two-envelopes-problem

./: .gitignore  BUILD  BUILD.bazel  Cargo.toml  Envelopes.java  MODULE.bazel  README.md  WORKSPACE  envelopes.cbl  envelopes.cc  envelopes.clj  envelopes.coffee  envelopes.cs  envelopes.d  envelopes.dart  envelopes.erl  envelopes.ex  envelopes.f08  envelopes.fs  envelopes.go  envelopes.groovy  envelopes.hs  envelopes.hx  envelopes.jl  envelopes.js  envelopes.kt  envelopes.lua  envelopes.main.kts  envelopes.ml  envelopes.pas  envelopes.php  envelopes.pl  envelopes.py  envelopes.r  envelopes.raku  envelopes.rb  envelopes.rs  envelopes.scala  envelopes.sh  envelopes.st  (+9 more)
source/envelopes/: envelopes.ceylon  module.ceylon
src/: envelopes.gleam
