load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

cc_binary(
  name = "envelopes_cc",
  srcs = ["envelopes.cc"],
)

java_binary(
  name = "envelopes_java",
  srcs = ["Envelopes.java"],
  main_class = "Envelopes"
)

kt_jvm_library(
    name = "envelopes_kt_lib",
    srcs = ["Envelopes.kt"],
)

java_binary(
  name = "envelopes_kt",
  runtime_deps = [":envelopes_kt_lib"],
  main_class = "EnvelopesKt"
)
